# GN-SLOP-DETECTION

./: .env.example  .gitignore  README.md  build-release.bat  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-quality-gate.yml  release.yml
app/: cli.py  desktop_server.py  main.py
app/api/: routes.py
app/core/: adversarial.py  detector.py  learned_weights.py  media_detector.py  media_vision.py  model_detector.py  netguard.py  pr_guard.py  settings.py  web_ingest.py
app/core/code_scanner/: __init__.py  llm.py  model.py  pq_readiness.py  redaction.py  sarif.py  scanner.py  suppression.py  walker.py
app/core/code_scanner/rules/: __init__.py  backdoor.py  base.py  ci_workflow.py  cmd_inject.py  crypto.py  deps.py  eval_exec.py  network.py  pqc.py  secrets.py
app/core/code_scanner/sources/: __init__.py  archive.py  base.py  git_local.py  git_remote.py  local.py
app/eval/: __init__.py  __main__.py  calibrate.py  corpus.py  learn_weights.py  logistic.py  metrics.py  runner.py
app/eval/data/: README.md  seed_corpus.jsonl
app/models/: schemas.py
app/static/: app.js  index.html  styles.css
docs/: architecture.md  release-signing.md
electron/: main.js  preload.js
examples/: sample.txt
installer/windows/: greynoc-slop-detection.iss
scripts/: build-inno-windows.ps1  compile-linux.sh  compile-mac.sh  compile-windows.bat  compile-windows.ps1  gn_slop_scan.py  package-github-release.ps1  run-cli.js  run-electron.js
tests/: test_adversarial.py  test_api.py  test_binoculars.py  test_cli.py  test_code_scanner.py  test_detector.py  test_engine_improvements.py  test_eval_harness.py  test_heuristics_frontier.py  test_learned_weights.py  test_llm_frontier.py  test_media.py  test_media_vision.py  test_model_detector.py  test_pqc_rules.py  test_pr_guard.py  test_qaqc_hardening.py  test_scanner_safety.py  test_security_hardening.py
