[project]
name = "gn-slop-detection"
version = "0.5.0"
description = "GreyNOC slop detection API and CLI"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "starlette>=0.41,<0.42",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "python-dotenv==1.0.1",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
]

[project.scripts]
gn-slop = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Rule definitions are intentionally long: each entry holds a
# description / remediation string in-line for readability over a
# wrapped one. Same for the bundled known-bad version list.
"app/core/code_scanner/rules/*.py" = ["E501"]
